force-app/main/default/objects/Buyer_Group_Membership__c/Buyer_Group_Membership__c.object-meta.xml
<CustomObject>
    <label>Buyer Group Membership</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Buyer Group Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Buyer Group Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>