force-app/main/default/objects/Buyer_Group_Membership__c/fields/Buyer_Group__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer Group</label>
    <referenceTo>BuyerGroup</referenceTo>
    <relationshipLabel>Buyer Group Memberships</relationshipLabel>
    <relationshipName>Buyer_Group_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>