force-app/main/default/objects/Buyer_Group_Membership__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>Buyer Group Memberships</relationshipLabel>
    <relationshipName>Buyer_Group_Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>