force-app/main/default/objects/Buyer_Group_Membership__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Buyer_Group__c</columns>
    <columns>Membership__c</columns>
    <columns>Certified__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>