force-app/main/default/objects/Buyer_Group_Membership__c/listViews/Buyer_Group_Memberships.listView-meta.xml
<ListView>
    <fullName>Buyer_Group_Memberships</fullName>
    <columns>Buyer_Group__c</columns>
    <columns>Membership__c</columns>
    <columns>Role__c</columns>
    <columns>Certified__c</columns>
    <filterScope>Mine</filterScope>
    <label>Buyer Group Memberships</label>
</ListView>